fixtures/invalid/bad-nav-absolute-href.mu
@nav label="Bad" href="/abs.html"
